Add types-defusedxml as a dev dependency for mypy

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ dev = [
     'types-setuptools',
     'build>=0.10.0',
     'twine>=4.0.0',
+    'types-defusedxml',
 ]
 docs = [
     'sphinx>=7.0.0',
