--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,55 @@ concurrency:
   cancel-in-flight: true
 
 jobs:
+  validate-version:
+    name: Validate tag version
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/v')
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Extract package version
+      id: package-version
+      run: |
+        # Extract version from pyproject.toml
+        PACKAGE_VERSION=$(python -c "
+        import tomli
+        with open('pyproject.toml', 'rb') as f:
+            data = tomli.load(f)
+        print(data['project']['version'])
+        ")
+        echo "PACKAGE_VERSION=$PACKAGE_VERSION" >> $GITHUB_OUTPUT
+
+    - name: Extract tag version
+      id: tag-version
+      run: |
+        TAG_VERSION="${GITHUB_REF#refs/tags/v}"
+        echo "TAG_VERSION=$TAG_VERSION" >> $GITHUB_OUTPUT
+
+    - name: Validate versions match
+      run: |
+        PACKAGE_VERSION="${{ steps.package-version.outputs.PACKAGE_VERSION }}"
+        TAG_VERSION="${{ steps.tag-version.outputs.TAG_VERSION }}"
+
+        if [ "$PACKAGE_VERSION" != "$TAG_VERSION" ]; then
+          echo "? CRITICAL: VERSION MISMATCH DETECTED!"
+          echo "::error::Git tag version does not match package version!"
+          echo "::error::Tag version: v$TAG_VERSION"
+          echo "::error::Package version: $PACKAGE_VERSION"
+          echo "::error::"
+          echo "::error::To fix this:"
+          echo "::error::1. Delete the wrong tag: git tag -d v$TAG_VERSION"
+          echo "::error::2. Delete remote tag: git push --delete origin v$TAG_VERSION"
+          echo "::error::3. Update pyproject.toml with correct version"
+          echo "::error::4. Create correct tag: git tag -a v$PACKAGE_VERSION -m 'Release v$PACKAGE_VERSION'"
+          echo "::error::5. Push correct tag: git push origin v$PACKAGE_VERSION"
+          exit 1
+        else
+          echo "? Versions match: v$TAG_VERSION"
+        fi
+
   test:
     name: Test on Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
@@ -85,7 +134,7 @@ jobs:
   test-pypi:
     name: Publish to TestPyPI
     runs-on: ubuntu-latest
-    needs: build
+    needs: validate-version build
     if: |
       startsWith(github.ref, 'refs/tags/v') &&
       (contains(github.ref, 'alpha') ||
@@ -122,7 +171,7 @@ jobs:
   pypi:
     name: Publish to PyPI
     runs-on: ubuntu-latest
-    needs: build
+    needs: validate-version build
     if: |
       startsWith(github.ref, 'refs/tags/v') &&
       !contains(github.ref, 'alpha') &&
