--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,8 @@ jobs:
     name: Validate tag version
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v')
+    outputs:
+      tag_version: ${{ steps.tag-version.outputs.TAG_VERSION }}
 
     steps:
     - name: Checkout code
@@ -134,7 +136,7 @@ jobs:
   test-pypi:
     name: Publish to TestPyPI
     runs-on: ubuntu-latest
-    needs: validate-version build
+    needs: [validate-version, build]
     if: |
       startsWith(github.ref, 'refs/tags/v') &&
       (contains(github.ref, 'alpha') ||
@@ -166,12 +168,12 @@ jobs:
       run: |
         python -m pip install --index-url https://test.pypi.org/simple/ \
           --extra-index-url https://pypi.org/simple/ \
-          xmlassert==${{ fromJSON('{"v": "' + github.ref_name + '"}').v.replace('v', '') }}
+          xmlassert==${{ needs.validate-version.outputs.tag_version }}
 
   pypi:
     name: Publish to PyPI
     runs-on: ubuntu-latest
-    needs: validate-version build
+    needs: [validate-version, build]
     if: |
       startsWith(github.ref, 'refs/tags/v') &&
       !contains(github.ref, 'alpha') &&
@@ -203,7 +205,8 @@ jobs:
       run: |
         # Wait a moment for PyPI to update
         sleep 30
-        pip install xmlassert==${{ fromJSON('{"v": "' + github.ref_name + '"}').v.replace('v', '') }}
+        pip install \
+          xmlassert==${{ needs.validate-version.outputs.tag_version }}
 
   github-release:
     name: Create GitHub Release
