--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -142,6 +142,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [validate-version, build]
     if: |
+      success() && needs.build.result == 'success' &&
       startsWith(github.ref, 'refs/tags/v') &&
       (contains(github.ref, 'alpha') ||
        contains(github.ref, 'beta') ||
