--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -135,6 +135,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: distribution-packages
+        path: dist/
 
   test-pypi:
     name: Publish to TestPyPI
@@ -153,6 +154,7 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: distribution-packages
+        path: dist/
 
     - name: DEBUG Check current directory
       run: |
