--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -234,6 +234,7 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: distribution-packages
+        path: dist/
 
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v1
