--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -227,7 +227,13 @@ jobs:
     name: Create GitHub Release
     runs-on: ubuntu-latest
     needs: [test-pypi, pypi]
-    if: always() && startsWith(github.ref, 'refs/tags/v')
+    if: |
+      always() &&
+      startsWith(github.ref, 'refs/tags/v') &&
+      (
+        (needs.test-pypi.result == 'success' || needs.test-pypi.result == 'skipped') &&
+        (needs.pypi.result == 'success' || needs.pypi.result == 'skipped')
+      )
 
     steps:
     - name: Download build artifacts
