--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -234,6 +234,8 @@ jobs:
         (needs.test-pypi.result == 'success' || needs.test-pypi.result == 'skipped') &&
         (needs.pypi.result == 'success' || needs.pypi.result == 'skipped')
       )
+    permissions:
+      contents: write
 
     steps:
     - name: Download build artifacts
