--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -201,6 +201,7 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: distribution-packages
+        path: dist/
 
     - name: Set up Python
       uses: actions/setup-python@v4
